--- a/org.gmf.example.simpleGrid.diagram/plugin.xml
+++ b/org.gmf.example.simpleGrid.diagram/plugin.xml
@@ -236,7 +236,7 @@
             <method name="getType()" value="4015,4010,4004,4016,4014,4013,4017,4003,4005,4001,4007,4006,4011,4008,4002,4009,4012"/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Node" id="generated-labels">
-            <method name="getType()" value="5001,5003,5006"/>
+            <method name="getType()" value=""/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Node" id="generated-compartments">
             <method name="getType()" value=""/>
@@ -270,13 +270,6 @@
       <IconProvider class="simpleGrid.diagram.providers.SimpleGridIconProvider">
          <Priority name="Low"/>
       </IconProvider>
-   </extension>
-
-   <extension point="org.eclipse.gmf.runtime.common.ui.services.parserProviders" id="parser-provider">
-      <?gmfgen generated="true"?>
-      <ParserProvider class="simpleGrid.diagram.providers.SimpleGridParserProvider">
-         <Priority name="Lowest"/>
-      </ParserProvider>
    </extension>
 
    <extension point="org.eclipse.gmf.runtime.emf.type.core.elementTypes" id="element-types">
